--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "emoji-picker-react": "^4.9.2",
     "react-player": "^2.15.1",
-    "react-select": "^5.8.0",
-    "redux-devtools-extension": "^2.13.9"
+    "react-select": "^5.8.0"
   }
 }
