--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "compose-function": "^3.0.3",
     "emoji-picker-react": "^4.9.2",
     "react-player": "^2.15.1",
     "react-select": "^5.8.0"
